<resources>
    <string name="app_name">Orar Loctrans</string>
    <string name="stationActivityToggleDescriptionOn">Afișați programul pentru toată ziua</string>
    <string name="lineActivitySwitch">Schimbați sensul de mers</string>
    <string name="stationsButton">Listă stații</string>
    <string name="linesButton">Listă linii</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_lines">Linii</string>
    <string name="title_stations">Stații</string>
    <string name="search_title">Caută</string>
    <string name="home_searchHint">Căutați stații...</string>
    <string name="stationSearchDialog_title">Selectați stație destinație</string>
    <string name="title_directions">Indicații</string>
    <string name="noBus">Nu există autobuze.</string>
    <string name="button_start_text">Stația plecare</string>
    <string name="button_end_text">Stația destinație</string>
    <string name="display_text">Setări afișare</string>
    <string name="help_text">Ajutor</string>
    <string name="about_text">Despre</string>
    <string name="display_dialog_title">Setați preferință temă</string>
    <string name="lines_shortcut_short_label">Linii</string>
    <string name="lines_shortcut_long_label">Listă linii</string>
    <string name="stations_shortcut_short_label">Stații</string>
    <string name="stations_shortcut_long_label">Listă stații</string>
    <string name="directions_shortcut_short_label">Indicații</string>
    <string name="directions_shortcut_long_label">Listă indicații</string>
</resources>
